--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@mdi/js": "^7.4.47",
+    "axios": "^1.7.2",
     "vue": "^3.4.31",
     "vue-router": "^4.0.13",
     "vuetify": "^3.6.13-3.7.0-beta.0.0"
