--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdi/font": "^7.4.47",
     "@mdi/js": "^7.4.47",
     "axios": "^1.7.2",
+    "marked": "^13.0.3",
     "vue": "^3.4.31",
     "vue-router": "^4.0.13",
     "vuetify": "^3.6.13-3.7.0-beta.0.0"
