--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdi/font": "^7.4.47",
     "@mdi/js": "^7.4.47",
     "axios": "^1.7.2",
+    "js-cookie": "^3.0.5",
     "marked": "^13.0.3",
     "vue": "^3.4.31",
     "vue-router": "^4.0.13",
